--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.0.0",
+    "@aws-sdk/client-ses": "^3.0.0",
     "@fastify/cors": "^11.2.0",
     "@fastify/static": "^8.3.0",
     "@nestjs/common": "^11.0.1",
